# polymarket-arbitrage

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
apps/api/: .env.example  main.py
apps/web/: index.html  package-lock.json  package.json  vite.config.js
apps/worker/: __init__.py  calculate_kpi.py  constants.py  detect_neg_risk.py  execution_simulation.py  neg_risk_detection.py  opportunity_validation.py  persistence.py  poll_polymarket.py  recommendation_scoring.py  score_recommendations.py  simulate_execution.py  validate_opportunities.py
docs/: deployment-render.md  v1-system-architecture.md  v2-api-surface-draft.md  v2-architecture.md  v2-dashboard-screen-map.md  v2-detection-family-map.md  v2-pmo-tracker.md  v2-pr-roadmap.md  v2-recommendation-governance.md
migrations/: env.py
migrations/versions/: 0001_create_markets_and_snapshots.py  0002_add_detection_metadata_and_opportunities.py  0003_add_detection_window_uniqueness.py  (+10 more)
scripts/: run_worker_cycle.sh
tests/: test_executable_edge_validator.py  test_execution_simulation.py  test_execution_simulator.py  test_health_api.py  test_kpi.py  test_migrations_v2_contracts.py  test_neg_risk_detection.py  test_neg_risk_detector.py  test_opportunity_classification.py  test_opportunity_repository.py  test_opportunity_validation.py  test_recommendation_scoring.py  test_research_api.py  test_resolution_validator.py  test_rule_based_relation_validator.py  test_semantic_validator.py  test_simulation_validator.py  test_worker_persistence.py
(+38 files in other folders)
